@@ -1,6 +1,6 @@
 /*
  * Copyright 2013-2014 SmartBear Software
- * Copyright 2014-2017 The TestFX Contributors
+ * Copyright 2014-2018 The TestFX Contributors
  *
  * Licensed under the EUPL, Version 1.1 or - as soon they will be approved by the
  * European Commission - subsequent versions of the EUPL (the "Licence"); You may
@@ -16,10 +16,8 @@
  */
 package org.testfx.toolkit.impl;
 
-import java.lang.reflect.Method;
-import java.util.Arrays;
-import java.util.List;
 import java.util.concurrent.Callable;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Future;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
@@ -29,30 +27,19 @@ import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.stage.Stage;
 
-import org.testfx.api.annotation.Unstable;
+import com.sun.javafx.application.ParametersImpl;
+
 import org.testfx.toolkit.ApplicationLauncher;
 import org.testfx.toolkit.ApplicationService;
-import org.testfx.toolkit.PrimaryStageFuture;
 import org.testfx.toolkit.ToolkitService;
 
 import static org.testfx.util.WaitForAsyncUtils.async;
 import static org.testfx.util.WaitForAsyncUtils.asyncFx;
 
-@Unstable
 public class ToolkitServiceImpl implements ToolkitService {
 
-    private static final String PARAMETERS_IMPL = "com.sun.javafx.application.ParametersImpl";
-    //---------------------------------------------------------------------------------------------
-    // PRIVATE FIELDS.
-    //---------------------------------------------------------------------------------------------
-
-    private ApplicationLauncher applicationLauncher;
-
-    private ApplicationService applicationService;
-
-    //---------------------------------------------------------------------------------------------
-    // CONSTRUCTORS.
-    //---------------------------------------------------------------------------------------------
+    private final ApplicationLauncher applicationLauncher;
+    private final ApplicationService applicationService;
 
     public ToolkitServiceImpl(ApplicationLauncher applicationLauncher,
                               ApplicationService applicationService) {
@@ -60,12 +47,8 @@ public class ToolkitServiceImpl implements ToolkitService {
         this.applicationService = applicationService;
     }
 
-    //---------------------------------------------------------------------------------------------
-    // METHODS.
-    //---------------------------------------------------------------------------------------------
-
     @Override
-    public Future<Stage> setupPrimaryStage(PrimaryStageFuture primaryStageFuture,
+    public Future<Stage> setupPrimaryStage(CompletableFuture<Stage> primaryStageFuture,
                                            Class<? extends Application> applicationClass,
                                            String... applicationArgs) {
         if (!primaryStageFuture.isDone()) {
@@ -74,7 +57,7 @@ public class ToolkitServiceImpl implements ToolkitService {
                     applicationLauncher.launch(applicationClass, applicationArgs);
                 }
                 catch (Throwable exception) {
-                    primaryStageFuture.setException(exception);
+                    primaryStageFuture.completeExceptionally(exception);
                 }
             });
         }
@@ -125,9 +108,7 @@ public class ToolkitServiceImpl implements ToolkitService {
                                                 Class<? extends Application> applicationClass,
                                                 String... applicationArgs) {
         return async(() -> {
-            Application application = applicationService.create(() ->
-                createApplication(applicationClass)
-            ).get();
+            Application application = asyncFx(() -> createApplication(applicationClass)).get();
             registerApplicationParameters(application, applicationArgs);
             applicationService.init(application).get();
             applicationService.start(application, stageSupplier.get()).get();
@@ -140,7 +121,7 @@ public class ToolkitServiceImpl implements ToolkitService {
                                                 Supplier<Application> applicationSupplier,
                                                 String... applicationArgs) {
         return async(() -> {
-            Application application = applicationService.create(applicationSupplier::get).get();
+            Application application = asyncFx(applicationSupplier::get).get();
             registerApplicationParameters(application, applicationArgs);
             applicationService.init(application).get();
             applicationService.start(application, stageSupplier.get()).get();
@@ -153,27 +134,12 @@ public class ToolkitServiceImpl implements ToolkitService {
         return applicationService.stop(application);
     }
 
-    //---------------------------------------------------------------------------------------------
-    // PRIVATE METHODS.
-    //---------------------------------------------------------------------------------------------
-
     private Application createApplication(Class<? extends Application> applicationClass) throws Exception {
-        return applicationClass.newInstance();
+        return applicationClass.getDeclaredConstructor().newInstance();
     }
 
     private void registerApplicationParameters(Application application, String... applicationArgs) {
-        // this is done via reflection to avoid compile-time dependencies on the JavaFX private API
-        Method registerParameters;
-        try {
-            Class<?> parametersImplClass = Class.forName(PARAMETERS_IMPL);
-            Application.Parameters parametersImpl = (Application.Parameters) parametersImplClass
-                    .getDeclaredConstructor(List.class).newInstance(Arrays.asList(applicationArgs));
-            Method registerParamsMethod = parametersImplClass.getDeclaredMethod("registerParameters", Application.class,
-                    Application.Parameters.class);
-            registerParamsMethod.invoke(null, application, parametersImpl);
-        }
-        catch (Exception exception) {
-            throw new IllegalStateException("could not register application parameters", exception);
-        }
+        ParametersImpl parameters = new ParametersImpl(applicationArgs);
+        ParametersImpl.registerParameters(application, parameters);
     }
 }
